Fix overlap the header with landing body

--- a/src/less/blocks/landing.less
+++ b/src/less/blocks/landing.less
@@ -27,7 +27,14 @@
 
       > * {
         position: relative;
+      }
+
+      > :not(.header) {
         z-index: 10;
+      }
+
+      > .header {
+        z-index: 100;
       }
 
       &:before {
